--- a/public/css/mobile_view/item_mobile.css
+++ b/public/css/mobile_view/item_mobile.css
@@ -3,13 +3,21 @@
     flex-direction: column;
     width: 96%;
     margin: 0 2%;
-    > #left {
+    margin-top: 3%;
+
+    >#left {
       margin: 0;
-      > img {
+
+      >img {
         width: 100%;
         margin: 0;
         padding: 0;
       }
     }
+
+    >#right p {
+      font-size: 1.3em;
+    }
+
   }
 }
