--- a/views/store.html
+++ b/views/store.html
@@ -473,6 +473,28 @@
         <br />
         <a href="/items/P56"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
       </div>
+
+      <div class="product reveal">
+        <img src="imgs/item_photos/P57.jpg" alt="product-image" />
+        <h4>Forever Aloe Lips (နှုတ်ခမ်းဆီ)</h4>
+        <br />
+        <a href="/items/P57"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
+      </div>
+
+      <div class="product reveal">
+        <img src="imgs/item_photos/P58.jpg" alt="product-image" />
+        <h4>Forever Aloe Lips (နှုတ်ခမ်းဆီ)</h4>
+        <br />
+        <a href="/items/P58"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
+      </div>
+
+      <div class="product reveal">
+        <img src="imgs/item_photos/P59.jpg" alt="product-image" />
+        <h4>Forever Aloe Lips (နှုတ်ခမ်းဆီ)</h4>
+        <br />
+        <a href="/items/P59"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
+      </div>
+
     </div>
   </section>
   <script src="js/store.js"></script>
