--- a/views/store.html
+++ b/views/store.html
@@ -476,23 +476,44 @@
 
       <div class="product reveal">
         <img src="imgs/item_photos/P57.jpg" alt="product-image" />
-        <h4>Forever Aloe Lips (နှုတ်ခမ်းဆီ)</h4>
+        <h4>Germany Collagen 5000 Premium(ဂျာမနီကော်လဂျင်)</h4>
         <br />
         <a href="/items/P57"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
       </div>
 
       <div class="product reveal">
         <img src="imgs/item_photos/P58.jpg" alt="product-image" />
-        <h4>Forever Aloe Lips (နှုတ်ခမ်းဆီ)</h4>
+        <h4>Taylor Mask(ထိုင်ဝမ်-ဂျပန် ရေဓါတ်ဖြည့်mask)</h4>
         <br />
         <a href="/items/P58"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
       </div>
 
       <div class="product reveal">
         <img src="imgs/item_photos/P59.jpg" alt="product-image" />
-        <h4>Forever Aloe Lips (နှုတ်ခမ်းဆီ)</h4>
+        <h4>Aveeno Daily Moisturizing Lotion(1000g)</h4>
         <br />
         <a href="/items/P59"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
+      </div>
+
+      <div class="product reveal">
+        <img src="imgs/item_photos/P60.jpg" alt="product-image" />
+        <h4>Bella Cream (ရင်သားလိမ်းဆေး)</h4>
+        <br />
+        <a href="/items/P61"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
+      </div>
+
+      <div class="product reveal">
+        <img src="imgs/item_photos/P61.jpg" alt="product-image" />
+        <h4>BB Candy (သောက်ဆေး)</h4>
+        <br />
+        <a href="/items/P61"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
+      </div>
+
+      <div class="product reveal">
+        <img src="imgs/item_photos/P56.jpg" alt="product-image" />
+        <h4>Cranberry C+E (ထိုင်ဝမ်-ဂျပန် ဗိုက်တာမင်စီ)</h4>
+        <br />
+        <a href="/items/P62"><button>အသေးစိတ်ကြည့်ရှုပါ။</button></a>
       </div>
 
     </div>
